--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover"
     />
 
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <title>MySpend</title>
   </head>
   <body>
