--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>MySpend</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
